--- a/res/html/index.html
+++ b/res/html/index.html
@@ -6,28 +6,30 @@
 
 <body>
 
-  <div id="wrap-horizontal">
-    <div id="wrap-vertical">
-      <div id="wrap-box">
-        <div id="offset-top">
-          &nbsp;
-        </div>
-        <div id="menue">
-          menue
-        </div>
-        <div id="content">
-          content
-        </div>
-        <div class="cb">
-          &nbsp;
-        </div>
-        <div id="header">
-          header
+  <div id="wrap-outer">
+    <div id="wrap-horizontal">
+      <div id="wrap-vertical">
+        <div id="wrap-box">
+          <div id="offset-top">
+            &nbsp;
+          </div>
+          <div id="menue">
+            menue
+          </div>
+          <div id="content">
+            content
+          </div>
+          <div class="cb">
+            &nbsp;
+          </div>
+          <div id="header">
+            header
+          </div>
         </div>
       </div>
-    </div>
-    <div id="footer">
-      footer
+      <div id="footer">
+        footer
+      </div>
     </div>
   </div>
 
