--- a/res/html/index.html
+++ b/res/html/index.html
@@ -22,11 +22,22 @@
           <div class="cb">
             &nbsp;
           </div>
-          <div id="header">
+          <div id="old-header">
             header
           </div>
         </div>
       </div>
+			<div id="header" class="no-print">
+                          <div id="wrap-slider-logo">
+                            <div id="header-logo">
+                              logo
+                            </div>
+                            <div id="header-slider">
+                              slider
+                            </div>
+                          </div>
+			</div>
+
       <div id="footer">
         footer
       </div>
