--- a/res/html/index.html
+++ b/res/html/index.html
@@ -22,12 +22,12 @@
           <div class="cb">
             &nbsp;
           </div>
-          <div id="old-header">
+          <div id="header">
             header
           </div>
         </div>
       </div>
-			<div id="header" class="no-print">
+			<div id="header2" class="no-print">
                           <div id="wrap-slider-logo">
                             <div id="header-logo">
                               logo
