--- a/res/html/index.html
+++ b/res/html/index.html
@@ -8,6 +8,16 @@
 
   <div id="wrap-outer">
     <div id="wrap-horizontal">
+      <div id="header" class="no-print">
+        <div id="wrap-slider-logo">
+          <div id="header-logo">
+            logo
+          </div>
+          <div id="header-slider">
+            slider
+          </div>
+        </div>
+      </div>
       <div id="wrap-vertical">
         <div id="wrap-box">
           <div id="offset-top">
@@ -22,22 +32,8 @@
           <div class="cb">
             &nbsp;
           </div>
-          <div id="header">
-            header
-          </div>
         </div>
       </div>
-			<div id="header2" class="no-print">
-                          <div id="wrap-slider-logo">
-                            <div id="header-logo">
-                              logo
-                            </div>
-                            <div id="header-slider">
-                              slider
-                            </div>
-                          </div>
-			</div>
-
       <div id="footer">
         footer
       </div>
