--- a/res/html/index.html
+++ b/res/html/index.html
@@ -1,41 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
-<head>
-</head>
+  <head>
+  </head>
 
-<body>
+  <body>
 
-  <div id="wrap-outer">
-    <div id="wrap-horizontal">
-      <div id="header" class="no-print">
-        <div id="wrap-slider-logo">
-          <div id="header-logo">
-            logo
+    <div id="wrap-outer">
+      <div class="row">
+        <div id="wrap-horizontal" class="columns">
+          <div id="wrap-slider-logo" class="row">
+            <div id="header-slider" class="columns show-for-large-up large-9">
+              slider
+            </div>
+            <div id="header-logo" class="columns medium-12 large-3">
+              logo
+            </div>
           </div>
-          <div id="header-slider">
-            slider
+          <div id="wrap-vertical" class="row">
+            <div id="wrap-box">
+              <div id="content" class="columns medium-12 large-9">
+                content
+              </div>
+              <div id="menue" class="columns medium-12 large-3">
+                menue
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div id="footer" class="columns">
+              footer
+            </div>
           </div>
         </div>
-      </div>
-      <div id="wrap-vertical">
-        <div id="wrap-box">
-          <div id="menue">
-            menue
-          </div>
-          <div id="content">
-            content
-          </div>
-          <div class="cb">
-            &nbsp;
-          </div>
-        </div>
-      </div>
-      <div id="footer">
-        footer
       </div>
     </div>
-  </div>
 
-</body>
+  </body>
 </html>
