--- a/res/html/index.html
+++ b/res/html/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <div id="wrap-outer">
-      <div class="row" class="clearfix">
+      <div class="row clearfix">
         <div id="wrap-horizontal" class="columns">
           <div id="wrap-slider-logo" class="row">
             <div id="header-slider" class="columns show-for-large-up large-9">
