--- a/res/html/index.html
+++ b/res/html/index.html
@@ -7,8 +7,8 @@
   <body>
 
     <div id="wrap-outer">
-      <div class="row clearfix">
-        <div id="wrap-horizontal" class="columns">
+      <div class="row">
+        <div id="wrap-box" class="columns">
           <div id="wrap-slider-logo" class="row">
             <div id="header-slider" class="columns show-for-large-up large-9">
               slider
@@ -17,7 +17,7 @@
               logo
             </div>
           </div>
-          <div id="wrap-vertical" class="row">
+          <div id="wrap-content" class="row  clearfix">
             <div id="content" class="columns medium-12 large-9">
               content
             </div>
