--- a/res/html/index.html
+++ b/res/html/index.html
@@ -17,7 +17,7 @@
               logo
             </div>
           </div>
-          <div id="wrap-content" class="row  clearfix">
+          <div id="wrap-content" class="row equalheight">
             <div id="content" class="columns medium-12 large-9">
               content
             </div>
