--- a/res/html/index.html
+++ b/res/html/index.html
@@ -9,7 +9,7 @@
     <div id="wrap-outer">
       <div class="row">
         <div id="wrap-box" class="columns">
-          <div id="wrap-slider-logo" class="row">
+          <div id="wrap-slider-logo" class="row no-print">
             <div id="header-slider" class="columns show-for-large-up large-9">
               slider
             </div>
@@ -21,7 +21,7 @@
             <div id="content" class="columns medium-12 large-9">
               content
             </div>
-            <div id="menue" class="columns medium-12 large-3">
+            <div id="menue" class="columns medium-12 large-3 no-print">
               menue
             </div>
           </div>
